sync up with latest in nexial-core